--- a/ochentaytres-angular-front/src/app/app.component.html
+++ b/ochentaytres-angular-front/src/app/app.component.html
@@ -5,8 +5,8 @@
         <div class="card-body">
           <h2 class="card-title text-center text-white py-3">{{ title }}</h2>
           <ul class="text-center list-inline py-3">
-            <li class="list-inline-item"><a routerLink="/parameters" class="btn btn-info">List Parameters</a></li>
-            <li class="list-inline-item"><a routerLink="/addParameter" class="btn btn-info">Add Parameter</a></li>
+            <li class="list-inline-item"><a routerLink="rest/parameter/list" class="btn btn-info">List Parameters</a></li>
+            <li class="list-inline-item"><a routerLink="rest/parameter/add" class="btn btn-info">Add Parameter</a></li>
           </ul>
         </div>
       </div>
